# mediavert

./: Cargo.toml  Kick.toml  README.md  out.rpm
.github/workflows/: ci.yml  release.yml
crates/audiovert/: Cargo.toml  README.md
crates/audiovert/src/: archive.rs  bitrates.rs  cli.rs  condition.rs  config.rs  format.rs  lib.rs  link.rs  main.rs  meta.rs  out.rs  set_bit_rate.rs  shell.rs  tasks.rs
crates/audiovert/src/archive/: _7z.rs  rar.rs  zip.rs
crates/bookvert/: Cargo.toml  README.md
crates/bookvert/src/: cli.rs  interactive.rs  lib.rs  main.rs  state.rs  styles.rs
crates/mediavert/: Cargo.toml  README.md
crates/mediavert/src/: main.rs
examples/: README.txt
src/: interactive.rs  main.rs
